--- a/Crystal/Crystal.vcxproj
+++ b/Crystal/Crystal.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="src\Crystal\MouseButtonCodes.h" />
     <ClInclude Include="src\Crystal\Renderer\Buffer.h" />
     <ClInclude Include="src\Crystal\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Crystal\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Crystal\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Crystal\Renderer\Renderer.h" />
     <ClInclude Include="src\Crystal\Renderer\RendererAPI.h" />
@@ -587,6 +588,7 @@
     <ClCompile Include="src\Crystal\LayerStack.cpp" />
     <ClCompile Include="src\Crystal\Log.cpp" />
     <ClCompile Include="src\Crystal\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Crystal\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Crystal\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Crystal\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Crystal\Renderer\RendererAPI.cpp" />
