--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -10,9 +10,15 @@ Size=550,625
 Collapsed=0
 
 [Window][Settings]
-Pos=893,182
-Size=294,263
+Pos=46,10
+Size=1110,701
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Docking][Data]
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=34,76 Size=1280,701 CentralNode=1
 
