--- a/Crystal-Editor/imgui.ini
+++ b/Crystal-Editor/imgui.ini
@@ -9,11 +9,21 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=94,117
-ViewportId=0x1C33C293
-Size=1296,863
+Pos=906,19
+Size=374,701
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][Viewport]
+Pos=0,19
+Size=870,701
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=34,76 Size=1280,701 CentralNode=1
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=870,701 Selected=0x995B0CF8
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=408,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=32,701 CentralNode=1
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=374,701 Selected=0x1C33C293
 
