--- a/Crystal-Editor/imgui.ini
+++ b/Crystal-Editor/imgui.ini
@@ -12,34 +12,42 @@ Collapsed=0
 Pos=956,19
 Size=324,351
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=157,19
-Size=763,701
+Pos=307,19
+Size=782,701
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=155,701
+Size=305,351
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Properties]
-Pos=956,372
-Size=324,348
+Pos=0,372
+Size=305,348
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Stats]
+Pos=1125,19
+Size=155,701
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=190,232 Size=1280,701 Split=X
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=155,701 Selected=0x9A68760C
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1123,701 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=870,701 Selected=0x995B0CF8
-    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=408,701 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=32,701 CentralNode=1
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=374,701 Split=Y Selected=0x1C33C293
-        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=324,351 Selected=0x1C33C293
-        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=324,348 Selected=0xC89E3217
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1123,701 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=305,701 Split=Y Selected=0x9A68760C
+      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=136,351 Selected=0x9A68760C
+      DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=136,348 Selected=0xC89E3217
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=816,701 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=782,701 Selected=0x995B0CF8
+      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=32,701 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=32,701 CentralNode=1
+        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=374,701 Selected=0x1C33C293
+  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=155,701 Selected=0x968648AE
 
