--- a/Crystal-Editor/imgui.ini
+++ b/Crystal-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,39 +15,37 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=307,19
-Size=782,701
+Pos=459,24
+Size=1226,993
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
-Pos=0,19
-Size=305,351
+Pos=0,24
+Size=457,498
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,372
-Size=305,348
+Pos=0,524
+Size=457,493
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Stats]
-Pos=1125,19
-Size=155,701
+Pos=1687,24
+Size=233,993
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1123,701 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=305,701 Split=Y Selected=0x9A68760C
-      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=136,351 Selected=0x9A68760C
-      DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=136,348 Selected=0xC89E3217
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=816,701 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=782,701 Selected=0x995B0CF8
-      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=32,701 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=32,701 CentralNode=1
-        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=374,701 Selected=0x1C33C293
-  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=155,701 Selected=0x968648AE
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,47 Size=1920,993 Split=X
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1404,876 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=381,701 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=136,351 Selected=0x9A68760C
+      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=136,348 Selected=0xC89E3217
+    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1021,701 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=32,701 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=374,701 Selected=0x1C33C293
+  DockNode      ID=0x0000000B Parent=0x3BC79352 SizeRef=194,876 Selected=0x968648AE
 
